# Reactive-Life

./: .gitignore  LICENSE  Life.cabal  README.md  default.nix
src/: Game.hs  Life.hs  Main.hs
src/Life/: Game.hs  Main.hs
