name:                reactive-life
version:             0.2.0.0
synopsis:            Conway's game of life as a demo of functional reactive programming.
description:         An interactive game of life program using threepenny-gui and functional reactive programming (FRP). I developed this as a simple example of FRP for a couple of talks I did on the subject, most recently at the East Bay Haskell meetup in Berkeley.
homepage:            jelv.is/frp
license:             BSD3
license-file:        LICENSE
author:              Tikhon Jelvis <tikhon@jelv.is>
maintainer:          Tikhon Jelvis <tikhon@jelv.is>

build-type:          Simple
cabal-version:       >=1.8

Library
  Build-depends:       base >=4.8 && <5
                     , containers
                     , repa >= 3.2
                     , threepenny-gui
  Hs-source-dirs:      src
  Exposed-modules:     Game

executable life
  -- .hs or .lhs file containing the Main module.
  main-is:             src/Main.hs
  
  ghc-options:         -threaded -O2

  -- Other library packages from which modules are imported.
  build-depends: base >=4.8 && <5
               , containers
               , repa >= 3.2
               , threepenny-gui
               , reactive-life
